plugins {
    id "java"
    id "com.gradleup.shadow" version "9.6.1"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {
    implementation project(":BungeeSK")

    implementation group: "com.github.rockaport", name: "alice", version: "0.9.0"
    implementation group: "com.github.Carleslc.Simple-YAML", name: "Simple-Yaml", version: "1.8.4"
    implementation group: "io.methvin", name: "directory-watcher", version: "0.15.1"
    implementation group: "org.bstats", name: "bstats-velocity", version: "3.1.0"
    compileOnly group: "com.velocitypowered", name: "velocity-api", version: "3.4.0-SNAPSHOT"
    annotationProcessor group: "com.velocitypowered", name: "velocity-api", version: "3.4.0-SNAPSHOT"
}

[compileJava, compileTestJava]*.options*.encoding = "UTF-8"

shadowJar {
    archiveFileName = "BungeeSK-Velocity.jar"

    relocate "org.bstats", "fr.zorg"

    // Adventure (net.kyori) reaches here transitively from :BungeeSK (where it's shaded for the
    // BungeeCord side), but Velocity provides Adventure natively — bundling it would clash. The only
    // thing referencing it here is the never-loaded bungee code, so it's safe to drop.
    exclude "net/kyori/**"

    minimize {
        exclude dependency("org.xerial:sqlite-jdbc:.*")
        exclude project(":BungeeSK")
    }
}
